# design_pattern_example

./: .gitignore  LICENSE  README.md
cpp/: CMakeLists.txt  create_visual_studio_solution.bat
cpp/examples/: CMakeLists.txt
cpp/examples/src/: crtp.h  main.cpp
cpp/examples/src/adapter/: json_exporter.h  logger.h  xml_exporter.h  xml_to_json_logger_adapter.h
cpp/examples/src/bridge/: armor.h  entity.h  equip.h  player.cpp  player.h  weapon.h
cpp/examples/src/observer/: monster.h  monster_observer.h  observer.h
cpp/examples/src/strategy/: enemy.h  enemy_update_strategy.h  entity.h  player.h  player_update_strategy.h
cpp/examples/src/strategy_object_oriented/: enemy.h  enemy_update_strategy.h  entity.h  player.h  player_update_strategy.h  update_strategy.h
cpp/test/: CMakeLists.txt
cpp/test/src/: sample_test.cpp
